give a better example and more options in js and update bower to use -init.js

--- a/bower.json
+++ b/bower.json
@@ -47,7 +47,7 @@
     "install" : {
 
         "jquery.flexslider.js" : "httpdocs/assets/js/lib",
-        "main.js" : "httpdocs/assets/js/src"
+        "main-init.js" : "httpdocs/assets/js/src"
 
     }
 
